Flickering sort of stopped. Slowed anyway

--- a/client/src/components/gameComponents/QuizForm.css
+++ b/client/src/components/gameComponents/QuizForm.css
@@ -27,7 +27,7 @@ article.plant-quiz > div > label {
 }
 
 article.plant-quiz > div.quiz-light > input {
-    margin: 0px 7px 0px 2px
+    margin: 0px 1px 0px 10px
 }
 
 article.plant-quiz > div > button {
